# fintech-agent

./: .dockerignore  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  main.py  pyproject.toml  requirements.txt
checkpoints/: faiss_index.idx  metadata.json
data/: financial_data.json
evaluation/: eval_dataset.json  run_evaluation.py
src/: agent.py  config.py  data_processor.py  llm_client.py  main.py  retriever.py  schema.py  session_manager.py
src/agents/: agent.py  llm_client.py
src/common/: config.py  schema.py
src/retriever/: retriever.py
templates/: cap_table.md  cash_flow.md  key_financials.md
